Target Explorer: Improve memory consumption for frequently called messages